--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -21,7 +21,7 @@ rand_core = "0.5.1"
 curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", tag = "2.0.0"}
 paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.4"}
 rayon = "1.3.0"
-serde = "1.0.104"
+serde = { version = "1.0.104", features = ["derive"] }
 bincode = "1.2.1"
 
 [dev-dependencies]
