--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -19,7 +19,7 @@ hex = "0.4.0"
 rand = "0.7.3"
 rand_core = "0.5.1"
 curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", tag = "2.0.0"}
-paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.4"}
+paillier = { git = "https://github.com/shubho/rust-paillier.git"}
 rayon = "1.3.0"
 serde = { version = "1.0.104", features = ["derive"] }
 bincode = "1.2.1"
