--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -20,7 +20,6 @@ csv = "1.1.1"
 rand = { version = "0.7.3", features = ["wasm-bindgen"] }
 indicatif = "0.13.0"
 hex = "0.3.0"
-serde = "1.0"
-serde_json = "1.0"
+serde = {version = "1.0.104", features = ["derive"] }
 num = "0.2.1"
 wasm-timer = "0.2.5"
