--- a/protocol-rpc/Cargo.toml
+++ b/protocol-rpc/Cargo.toml
@@ -26,12 +26,28 @@ name = "private-id-client"
 path = "src/rpc/private-id/client.rs"
 
 [[bin]]
+name = "private-id-multi-key-server"
+path = "src/rpc/private-id-multi-key/server.rs"
+
+[[bin]]
+name = "private-id-multi-key-client"
+path = "src/rpc/private-id-multi-key/client.rs"
+
+[[bin]]
 name = "pjc-server"
 path = "src/rpc/pjc/server.rs"
 
 [[bin]]
 name = "pjc-client"
 path = "src/rpc/pjc/client.rs"
+
+[[bin]]
+name = "suid-create-server"
+path = "src/rpc/suid-create/server.rs"
+
+[[bin]]
+name = "suid-create-client"
+path = "src/rpc/suid-create/client.rs"
 
 [lib]
 name = "rpc"
@@ -51,7 +67,7 @@ tonic = {version="0.1.1", features=["tls", "tls-roots", "prost"]}
 tokio = { version = "0.2", features = ["sync", "rt-threaded", "time", "stream", "fs", "macros"] }
 tokio-rustls = "0.12.1"
 tower = { version = "0.3.0" }
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0"
 prost-types = "0.6"
 prost = "0.6"
@@ -67,6 +83,7 @@ indicatif = "0.13.0"
 ctrlc = "3.1.3"
 retry = "0.5.1"
 bincode = "1.2.1"
+itertools = "0.9.0"
 
 
 [build-dependencies]
