--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -17,3 +17,7 @@ serde_json = "1.0"
 log = "0.4"
 env_logger = "0.7.1"
 csv = "1.1.1"
+itertools = "0.9.0"
+rand = "0.7.3"
+rand_core = "0.5.1"
+hex = "0.4.2"
