--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -15,17 +15,19 @@ log = "0.4"
 env_logger = "0.7.1"
 sha2 = "0.8.0"
 hex = "0.4.0"
-rand = "0.7.3"
+rand = "0.8"
 rand_core = "0.5.1"
 curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", tag = "2.0.0"}
-paillier = { git = "https://github.com/shubho/rust-paillier.git"}
 rayon = "1.3.0"
-serde = { version = "1.0.104", features = ["derive"] }
+serde = {version = "1.0.104", features = ["derive"] }
 bincode = "1.2.1"
+num-bigint = { version = "0.4", features = ["rand"] }
+num-traits = "0.2"
+num-integer = "0.1"
 
 [dev-dependencies]
 criterion = "0.2"
 
 [[bench]]
-name = "he_benchmark"
+name = "paillier_benchmark"
 harness = false
