--- a/protocol-rpc/Cargo.toml
+++ b/protocol-rpc/Cargo.toml
@@ -70,7 +70,7 @@ tokio-rustls = "0.22"
 tower = { version = "0.3.0" }
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0"
-prost = "0.7"
+prost = "0.8"
 futures =  { version = "0.3", features = ["thread-pool", "alloc"]}
 http = "0.2"
 url = "2.1.0"
@@ -85,6 +85,8 @@ retry = "0.5.1"
 bincode = "1.2.1"
 itertools = "0.9.0"
 tempfile = "3.2.0"
+num-bigint = { version = "0.4", features = ["rand"] }
+num-traits = "0.2"
 
 
 [build-dependencies]
