--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -18,6 +18,9 @@ log = "0.4"
 env_logger = "0.7.1"
 csv = "1.1.1"
 itertools = "0.9.0"
-rand = "0.7.3"
+rand = "0.8"
 rand_core = "0.5.1"
 hex = "0.4.2"
+rayon = "1.3.0"
+num-bigint = { version = "0.4", features = ["rand"] }
+num-traits = "0.2"
