--- a/protocol-rpc/Cargo.toml
+++ b/protocol-rpc/Cargo.toml
@@ -63,14 +63,14 @@ protocol = {path = "../protocol", version = "0.1.0"}
 
 log = "0.4"
 env_logger = "0.7.1"
-tonic = {version="0.4.3", features=["tls", "tls-roots", "prost"]}
+tonic = {version="0.5.2", features=["tls", "tls-roots", "prost"]}
 tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
 tokio-stream = { version =  "0.1.6", features = ["net"] }
 tokio-rustls = "0.22"
 tower = { version = "0.3.0" }
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0"
-prost = "0.7"
+prost = "0.8"
 futures =  { version = "0.3", features = ["thread-pool", "alloc"]}
 http = "0.2"
 url = "2.1.0"
@@ -85,7 +85,9 @@ retry = "0.5.1"
 bincode = "1.2.1"
 itertools = "0.9.0"
 tempfile = "3.2.0"
+num-bigint = { version = "0.4", features = ["rand"] }
+num-traits = "0.2"
 
 
 [build-dependencies]
-tonic-build = { version = "0.4.2" }
+tonic-build = { version = "0.5.2" }
