--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Publish Private-ID Docker Image
+name: Publish private-id Docker Image
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 env:
   DISTRO: ubuntu
   REGISTRY: ghcr.io
-  LOCAL_IMAGE_NAME: ${{ github.event.repository.name }}
+  LOCAL_IMAGE_NAME: private-id
   LOCAL_IMAGE_TAG: latest
   REGISTRY_IMAGE_NAME: ghcr.io/${{ github.repository }}
 
@@ -20,8 +20,21 @@ jobs:
     packages: write
 
    steps:
+     
+     - name: Lowercase REGISTRY_IMAGE_NAME
+       id: string
+       uses: ASzc/change-string-case-action@v1
+       with:
+          string: ${{ env.REGISTRY_IMAGE_NAME }}
+     - run: |
+          echo "REGISTRY_IMAGE_NAME_LOWERCASE=${{ steps.string.outputs.lowercase }}" >> ${GITHUB_ENV}
+          
+     - name: Check REGISTRY_IMAGE_NAME_LOWERCASE 
+       run: |
+         echo "env.$REGISTRY_IMAGE_NAME_LOWERCASE"
+         
      - uses: actions/checkout@v2
-
+     
      - name: Build image
        run: |
         docker build -f ./Dockerfile -t ${{ env.LOCAL_IMAGE_NAME }}:${{ env.LOCAL_IMAGE_TAG }} .
@@ -41,10 +54,10 @@ jobs:
 
      - name: Tag docker image
        run: |
-          docker tag ${{ env.LOCAL_IMAGE_NAME }}:${{ env.LOCAL_IMAGE_TAG }} ${{ env.REGISTRY_IMAGE_NAME }}:${{ github.sha }}
-          docker tag ${{ env.LOCAL_IMAGE_NAME }}:${{ env.LOCAL_IMAGE_TAG }} ${{ env.REGISTRY_IMAGE_NAME }}:${{ steps.vars.outputs.ref }}
-          docker tag ${{ env.LOCAL_IMAGE_NAME }}:${{ env.LOCAL_IMAGE_TAG }} ${{ env.REGISTRY_IMAGE_NAME }}:latest
+          docker tag ${{ env.LOCAL_IMAGE_NAME }}:${{ env.LOCAL_IMAGE_TAG }} ${{ env.REGISTRY_IMAGE_NAME_LOWERCASE }}:${{ github.sha }}
+          docker tag ${{ env.LOCAL_IMAGE_NAME }}:${{ env.LOCAL_IMAGE_TAG }} ${{ env.REGISTRY_IMAGE_NAME_LOWERCASE }}:${{ steps.vars.outputs.ref }}
+          docker tag ${{ env.LOCAL_IMAGE_NAME }}:${{ env.LOCAL_IMAGE_TAG }} ${{ env.REGISTRY_IMAGE_NAME_LOWERCASE }}:latest
      
      - name: Push image to registry
        run: |
-          docker push --all-tags ${{ env.REGISTRY_IMAGE_NAME }}
+          docker push --all-tags ${{ env.REGISTRY_IMAGE_NAME_LOWERCASE }}
