--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -18,6 +18,7 @@ hex = "0.4.0"
 rand = "0.8"
 rand_core = "0.5.1"
 curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", tag = "2.0.0"}
+Cupcake = { git = "https://github.com/facebookresearch/Cupcake"}
 rayon = "1.3.0"
 serde = {version = "1.0.104", features = ["derive"] }
 bincode = "1.2.1"
@@ -30,4 +31,8 @@ criterion = "0.2"
 
 [[bench]]
 name = "paillier_benchmark"
+harness = false
+
+[[bench]]
+name = "cupcake_benchmark"
 harness = false
