--- a/protocol-rpc/Cargo.toml
+++ b/protocol-rpc/Cargo.toml
@@ -85,7 +85,7 @@ url = "2.1.0"
 async-stream = "0.2"
 rayon = "1.3.0"
 bytes = "0.4"
-clap = "~2.33.0"
+clap = "2.33.4"
 csv = "1.1.1"
 indicatif = "0.13.0"
 ctrlc = "3.1.3"
