--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -32,3 +32,4 @@ thiserror = "1.0.25"
 tokio = { version = "1", features = ["full"] }
 cloud-storage = "0.10"
 tokio-util = "0.6.9"
+serde_json = "1.0"
