--- a/protocol-rpc/Cargo.toml
+++ b/protocol-rpc/Cargo.toml
@@ -57,6 +57,18 @@ path = "src/rpc/suid-create/server.rs"
 name = "suid-create-client"
 path = "src/rpc/suid-create/client.rs"
 
+[[bin]]
+name = "dpmc-company-server"
+path = "src/rpc/dpmc/company-server.rs"
+
+[[bin]]
+name = "dpmc-partner-server"
+path = "src/rpc/dpmc/partner-server.rs"
+
+[[bin]]
+name = "dpmc-helper"
+path = "src/rpc/dpmc/client.rs"
+
 [lib]
 name = "rpc"
 path = "src/lib.rs"
@@ -85,13 +97,14 @@ bytes = "0.4"
 clap = "2.33.4"
 csv = "1.1.1"
 indicatif = "0.13.0"
-ctrlc = "3.1.3"
+ctrlc = "3.2.3"
 retry = "0.5.1"
 bincode = "1.2.1"
 itertools = "0.9.0"
 tempfile = "3.2.0"
 num-bigint = { version = "0.4", features = ["rand"] }
 num-traits = "0.2"
+fernet = { version = "0.1.4", features = ["fernet_danger_timestamps"] }
 
 
 [build-dependencies]
