--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -21,11 +21,11 @@ itertools = "0.9.0"
 rand = "0.8"
 rand_core = "0.5.1"
 hex = "0.4.2"
-rayon = "1.3.0"
+rayon = "1.8.0"
 num-bigint = { version = "0.4", features = ["rand"] }
 num-traits = "0.2"
 zeroize = "1.5.5"
 tempfile = "3.2.0"
 mockall = "0.10.2"
-fernet = { version = "0.1.4", features = ["fernet_danger_timestamps"] }
-base64 = "0.13.0"
+fernet = "0.2.1"
+base64 = "0.21.5"
